fixes spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -69,6 +69,7 @@ $breakpoint-mobile: 500px;
     p{
       display:inline-block;
     }
+    margin:0 auto;
     width:90%;
     display:flex;
     justify-content:space-between;
